# lotus-lake

./: .env.example  .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.cube  Dockerfile.dlt  Makefile  README.md  directory.txt  helmfile.yaml.gotmpl  pyproject.toml  requirements.txt  workspace.yaml
.forgejo/workflows/: build.yaml
.github/workflows/: build.yaml
airbyte/: export-streams.py
airbyte/streams/: klaviyo.json  shopify.json
airbyte/terraform/: .terraform.lock.hcl  connections.tf  destinations.tf  sources.tf  variables.tf
ci/: Dockerfile  requirements-ci.txt  setup.sh
custom_dashboards/: Dockerfile.custom-dashboards  app.py  directory.txt  requirements.txt
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
deploy/: bootstrap.yaml  kustomization.yaml
docs/: Claude.md  adding-a-destination.md  adding-a-flow.md  adding-a-source.md  architecture.md  cube.md  custom-ingestion-dlt.md  deploying-dagster.md  deployment.md  ducklake-metadata.md  getting-started.md  github-actions.md  secrets.md  tickets.md  troubleshooting.md
infra/: .env.example  Caddyfile  Caddyfile-local  Caddyfile-prod  dagster.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ingestion_state.sql  spark-defaults.conf  trino-catalog.properties
minio/: values.yaml
orchestration/: .user.yml  Dockerfile.orchestration  assets.py  dbt_project.yml  definitions.py  lib.py  profiles.yml  requirements.txt  resources.py  sensors.py
shared/: config.py
spark/: Dockerfile.spark-base  Dockerfile.spark-master  Dockerfile.spark-worker
sql/: raw_email_clicked.sql  raw_email_open.sql  raw_klaviyo_campaign.sql  raw_received_email.sql  raw_shopify_orders.sql  raw_shopify_products.sql  raw_shopify_refunds.sql
tests/: test_connections.py
trino/: values.yaml  values.yaml.gotmpl
(+243 files in other folders)
