[project]
name = "lotus-lake"
version = "0.1.0"
description = "Lotus & Luna Lakehouse"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.9",
    "dagster-webserver>=1.9",
    "dagster-dbt>=0.25",
    "dagster-airbyte>=0.25",
    "dbt-trino>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestration"]

[tool.dagster]
module_name = "orchestration.definitions"
