[project]
name = "lotus-lake"
version = "0.1.0"
description = "Lotus & Luna Lakehouse"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.11",
    "dagster-webserver>=1.11",
    "dagster-postgres>=0.27",
    "dagster-dbt>=0.27",
    "dbt-duckdb>=1.8",
    # dlt ingestion
    "dlt[filesystem,parquet]==1.21.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestration"]

[tool.dagster]
module_name = "orchestration.definitions"
